<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".TestAudio.InfoActivity">

    <LinearLayout
        android:id="@+id/linear_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:src="@drawable/success" />

        <TextView
            android:id="@+id/txt_title_oido_left"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/str_oido_izquierdo"
            android:textAlignment="center"
            android:textColor="@color/blueColorPrimaryDark" />

        <TextView
            android:id="@+id/txt_min_left_ear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_freq_minima"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txt_max_left_ear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_freq_max"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/blueColorPrimaryDark" />

        <TextView
            android:id="@+id/txt_title_oido_right"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/str_oido_derecho"
            android:textAlignment="center"
            android:textColor="@color/blueColorPrimaryDark" />

        <TextView
            android:id="@+id/txt_min_right_ear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_freq_minima"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txt_max_right_ear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_freq_max"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:theme="@style/AppTheme.BlueButtonMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClickAccept"
        android:text="@string/str_aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>