<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:scrollbars="none"
    android:background="@color/blueColorLight"
    tools:context=".InitialActivity">

    <LinearLayout
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="4dp"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_marginBottom="16dp"
            android:layout_width="344dp"
            android:layout_height="382dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:onClick="onClickPruebaAudio"
            android:foreground="?selectableItemBackground"
            >
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_rango_auditivo"
                    android:layout_alignParentTop="true"
                    android:padding="16dp"
                    android:textColor="@color/greenColorAccent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />

                <ImageView
                    android:id="@+id/img_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#F9B51C"
                    android:src="@drawable/headphones"
                    android:layout_below="@+id/txt_title"
                    />

                <LinearLayout
                    android:layout_below="@+id/img_card_view"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_height="wrap_content">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_descripcion_rango_auditivo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        />

                    <Button
                        android:id="@+id/btn_prueba_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/str_iniciar_prueba"
                        android:layout_gravity="end"
                        android:visibility="gone"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:onClick="onClickPruebaAudio"

                        />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="344dp"
            android:layout_height="382dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:foreground="?selectableItemBackground"
            android:onClick="onClickPruebaVoz"
            android:layout_marginBottom="16dp">
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_rango_de_voz"
                    android:layout_alignParentTop="true"
                    android:padding="16dp"
                    android:textColor="@color/greenColorAccent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_card_view2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/txt_title2"
                    android:background="#5CBCB3"
                    android:src="@drawable/microphone"
                    android:padding="4dp"
                    />

                <LinearLayout
                    android:layout_below="@+id/img_card_view2"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_height="wrap_content">



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/str_leyenda_rango_de_voz"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        />

                    <Button
                        android:id="@+id/btn_prueba_voz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_iniciar_prueba"
                        android:layout_gravity="end"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:onClick="onClickPruebaVoz"
                        android:visibility="gone"
                        />
                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>